// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> matches snapshot 1`] = `
<MessageWrap>
  <styled.div>
    <styled.div>
      tester
    </styled.div>
    <styled.img
      alt="tester"
      own={false}
      src="test-avatar"
    />
  </styled.div>
  hey
  <styled.div />
</MessageWrap>
`;

exports[`<Message /> matches snapshot[own] 1`] = `
<OwnMessageWrap>
  <styled.div>
    <styled.div>
      tester
    </styled.div>
    <styled.img
      alt="tester"
      own={true}
      src="test-avatar"
    />
  </styled.div>
  hey
  <styled.div />
</OwnMessageWrap>
`;
